--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-PORT=8080 
+PORT=8080
+MONGO_CNN=mongodb+srv://nestrra:Tuherramienta80@tuherramienta.rvggd.mongodb.net/Tuherramienta
+USER=nestrra
+PASS=Tuherramienta80
